fixed chatbot message box vertical alignment bug

--- a/src/Chatbot.css
+++ b/src/Chatbot.css
@@ -53,3 +53,12 @@ h1 {
     border-radius: 10px;
 }
 
+.message-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1vh 10%;
+    height: 20%
+};
+
+
